# kite

./: .editorconfig  .gitignore  .golangci.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  SECURITY.md  claude_tasks.txt  copilot_tasks.txt  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  go.mod  kite.nimble  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  todo.txt
.github/workflows/: ci-cd.yml  ci.yaml  ci.yml  codeql.yml  docker.yml  lint.yml  publish.yml  release.yaml
api/graphql/: schema.graphql
api/proto/: common.proto  scraper.proto  search.proto
archive/: requirements.txt
archive/old-document-extraction/: Dockerfile  pyproject.toml
archive/src/: main.py
archive/tests/: test_nlp.py
archive/v1-python/: README.md
archive/v2-python/: .dockerignore  .flake8  Makefile  README.md  package-lock.json  pyproject.toml  setup.py
archive/v2-python/deployment/grafana/datasources/: datasource.yml
archive/v2-python/deployment/prometheus/: prometheus.yml
archive/v2-python/k8s/: deployment.yaml  namespace.yaml
archive/v2-python/kite/: __init__.py  cli_helpers.py
archive/v2-python/kite/scrapers/: __init__.py  courtlistener.py  legal_tools.py  singapore_judiciary.py  supremecourt_india.py  supremecourt_japan.py
archive/v2-python/kite/utils/: async_utils.py  attribution.py  batch.py  citation_validator.py  connection_pool.py  date_parser.py  deduplication.py  env.py  exceptions.py  metrics.py  monitoring_helpers.py  scraper_base.py  string_utils.py  url_validator.py
archive/v2-python/kite/utils/cache/: simple_cache.py
archive/v2-python/scripts/: verify_package.py
archive/v2-python/tests/: __init__.py
archive/v2-python/tests/test_e2e/: test_cli_e2e.py
archive/v2-python/tests/test_utils/: test_config.py  test_data_models.py  test_monitoring.py
archive/v3-nim/: README.md
benchmarks/: benchmark_scrapers.py
cmd/kite-admin/: README.md  main.go
cmd/kite-api/: main.go
cmd/kite-worker/: main.go
configs/: default.yaml  jurisdiction-rules.yaml  scraping-policies.yaml
deployment/alertmanager/: config.yaml
deployment/docker/: Dockerfile.dev  Dockerfile.multistage
deployment/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  secret.yaml  service.yaml
deployment/monitoring/: README.md  docker-compose.yaml
deployment/prometheus/: prometheus.yml  rules.yaml
docs/: API.md  API_GATEWAY.md  ARCHITECTURE.md  DEVELOPMENT.md  GRAPHQL_API.md  GRPC_API.md  OPERATIONS.md  PLUGIN_DEVELOPMENT.md  SEARCH_API.md  V4_README.md  WEBSOCKET_API.md  docs.go
examples/: usage_example.py
examples/plugins/: example_scraper.go
internal/api/: routes.go  swagger.go
internal/batch/: processor.go
internal/cache/: factory.go  interface.go  memory.go  multilevel.go  redis.go
internal/citation/: extractor.go  network.go  normalizer.go  service.go
internal/compliance/: attribution.go  policy.go
internal/concepts/: extractor.go  service.go  taxonomy.go
k8s/: configmap.yaml  hpa.yaml  secret.yaml.template  service.yaml  servicemonitor.yaml
kite/: cli.py  constants.py  types.py
scripts/: generate-mocks.sh  migrate.sh  setup.sh
src/: kite.nim
tests/: conftest.py  markers.py  test_cli.py  test_extractors.py  test_main.py
tests_nim/: cli_test.nim
versions/: README.md
(+216 files in other folders)
